sequelize validaciones y control de errores asincronos
